Update shared/libs/common/src/main/java/com/example/loyalty/common/security/LoyaltySecurityConfig.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>